[gd_scene load_steps=6 format=3 uid="uid://cyttn4tdnosb2"]

[ext_resource type="Script" path="res://main.gd" id="1_1rsni"]
[ext_resource type="PackedScene" uid="uid://byau38vxwfi12" path="res://environment/background_stars.tscn" id="1_r8tei"]
[ext_resource type="PackedScene" uid="uid://2rye1ajle5pa" path="res://actors/simple_random_enemy.tscn" id="2_08omq"]
[ext_resource type="PackedScene" uid="uid://caeadxr7iwrgo" path="res://actors/player.tscn" id="2_y7b0d"]

[sub_resource type="Curve2D" id="Curve2D_oykrk"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1200, 0)
}
point_count = 2

[node name="Main" type="Node2D"]
script = ExtResource("1_1rsni")
baddie_scene = ExtResource("2_08omq")

[node name="BackgroundStars" parent="." instance=ExtResource("1_r8tei")]

[node name="Player" parent="." instance=ExtResource("2_y7b0d")]
bullet_velocity = 600

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(600, 550)

[node name="Baddies" type="Node" parent="."]

[node name="BaddieTimer" type="Timer" parent="."]

[node name="ScreenTop" type="Path2D" parent="."]
curve = SubResource("Curve2D_oykrk")

[node name="Follower" type="PathFollow2D" parent="ScreenTop"]

[node name="GameUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="ScoreLabel" type="RichTextLabel" parent="GameUI"]
offset_left = 32.0
offset_top = 36.0
offset_right = 87.0
offset_bottom = 62.0
text = "Score:
"

[node name="ScoreValueLabel" type="RichTextLabel" parent="GameUI"]
offset_left = 85.0
offset_top = 37.0
offset_right = 275.0
offset_bottom = 63.0
text = "0
"

[node name="StartUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="BaddieTimer" to="." method="_on_baddie_timer_timeout"]
